--- a/trialsite/requirements.txt
+++ b/trialsite/requirements.txt
@@ -1,9 +1,17 @@
-Django==2.1.1
-pbr==4.2.0
+diff-match-patch==20121119
+Django==2.1.2
+django-appconf==1.0.2
+django-import-export==1.1.0
+django-select2==6.3.1
+django-tinymce==2.7.0
+et-xmlfile==1.0.1
+jdcal==1.4
+odfpy==1.3.6
+openpyxl==2.5.9
 psycopg2==2.7.5
 pytz==2018.5
-six==1.11.0
-stevedore==1.29.0
-virtualenv==16.0.0
-virtualenv-clone==0.3.0
-virtualenvwrapper==4.8.2
+PyYAML==3.13
+tablib==0.12.1
+unicodecsv==0.14.1
+xlrd==1.1.0
+xlwt==1.3.0
